# OS

./: README.md
lab1/Creator/: Creator.cpp
lab1/Main/: Main.cpp
lab1/Reporter/: Reporter.cpp
lab2/: CMakeLists.txt  array_utils.cpp  array_utils.h  main.cpp
lab2/tests/: test_array_utils.cpp
lab3/: CMakeLists.txt  main.cpp  marker_utils.cpp  marker_utils.h
lab3/tests/: test_marker_utils.cpp
lab4/: CMakeLists.txt  common.h  ipc_utils.cpp  ipc_utils.h  receiver.cpp  sender.cpp
lab4/tests/: test_ipc_utils.cpp
lab5/: CMakeLists.txt  build.bat  client.cpp  common.h  file_manager.cpp  file_manager.h  lock_manager.cpp  lock_manager.h  server.cpp  types.h
lab5/tests/: test_file_manager.cpp  test_lock_manager.cpp
